# rusoto-sqs-k8s-demo

./: .dockerignore  Cargo.toml  Dockerfile  README.md  deployment.yaml
src/: main.rs
